objects/Veda_Fraud_Aml_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Date_Of_Birth_Present__c</fullName>
        <label>Date Of Birth Present</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Present__c</fullName>
        <label>History Present</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Address_Present__c</fullName>
        <label>Name Address Present</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safe_Harbour_Present__c</fullName>
        <label>Safe Harbour Present</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Fraud__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Fraud</label>
        <referenceTo>Veda_Fraud__c</referenceTo>
        <relationshipLabel>Veda Fraud Aml Summary</relationshipLabel>
        <relationshipName>Veda_Fraud_Aml_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Fraud Aml Summary</label>
    <nameField>
        <label>Aml Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Fraud Aml Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>